# rust-study

./: README.md
hardware_monitor/: Cargo.toml
hardware_monitor/src/: cpu_temp.rs  lib.rs  main.rs
rust_hello/guessing_game/: Cargo.toml
rust_hello/guessing_name/: Cargo.toml
rust_hello/guessing_name/src/: main.rs
rust_hello/variables/src/: main.rs
